Fix show/hide password when clicking password icon
This patch overrides a Bootstrap's default property that disables
mouse events on elements with .form-control-feedback class. The password
icon had pointer-events: none; affecting password reveal functionality
in login form and Identity->Users->Create User. It also modifies the default
cursor for the password icon with pointer.

This patch also fixes a bug where the Eye Icon is misaligned when passwords
don't match (See #1604196)

Closes-bug: #1593430
Closes-bug: #1604196

--- a/openstack_dashboard/static/dashboard/scss/components/_forms.scss
+++ b/openstack_dashboard/static/dashboard/scss/components/_forms.scss
@@ -10,4 +10,9 @@
     line-height: $input-height-base;
     top: 0;
   }
+
+  .password-icon {
+    cursor: pointer;
+    pointer-events: auto;
+  }
 }
